cmake_minimum_required(VERSION 3.13.4)
project(SwiftREPLExample)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set paths to our LLDB build
set(LLDB_BUILD_DIR "/home/jjerphan/dev/llvm-project/build-lldb-swift")
set(LLDB_SOURCE_DIR "/home/jjerphan/dev/llvm-project/lldb")

# Add executable
add_executable(swift_repl_test test_swift_repl.cpp)

# Include directories
target_include_directories(swift_repl_test PRIVATE
    ${LLDB_SOURCE_DIR}/include
    ${LLDB_BUILD_DIR}/tools/lldb/source/API
    ${LLDB_BUILD_DIR}/include
)

# Link against LLDB libraries
target_link_libraries(swift_repl_test 
    ${LLDB_BUILD_DIR}/lib/liblldb.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginExpressionParserSwift.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginTypeSystemSwift.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginSwiftLanguage.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginSwiftLanguageRuntime.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginTypeSystemClang.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginCPlusPlusLanguage.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginClangCommon.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginObjCLanguage.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginObjCRuntime.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginCPPRuntime.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginAppleObjCRuntime.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginSymbolFileDWARF.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginSymbolFilePDB.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginSymbolFileNativePDB.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginProcessUtility.a
    ${LLDB_BUILD_DIR}/lib/liblldbPluginObjectFilePDB.a
    ${LLDB_BUILD_DIR}/lib/liblldbHost.a
    ${LLDB_BUILD_DIR}/lib/liblldbUtility.a
    ${LLDB_BUILD_DIR}/lib/liblldbValueObject.a
    ${LLDB_BUILD_DIR}/lib/liblldbTarget.a
    ${LLDB_BUILD_DIR}/lib/liblldbSymbol.a
    ${LLDB_BUILD_DIR}/lib/liblldbVersion.a
    ${LLDB_BUILD_DIR}/lib/liblldbInterpreterInterfaces.a
    ${LLDB_BUILD_DIR}/lib/libclangBasic.a
    ${LLDB_BUILD_DIR}/lib/libclangAST.a
    ${LLDB_BUILD_DIR}/lib/libclangSema.a
    ${LLDB_BUILD_DIR}/lib/libclangCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libclangFrontend.a
    ${LLDB_BUILD_DIR}/lib/libclangDriver.a
    ${LLDB_BUILD_DIR}/lib/libclangParse.a
    ${LLDB_BUILD_DIR}/lib/libclangSerialization.a
    ${LLDB_BUILD_DIR}/lib/libclangAnalysis.a
    ${LLDB_BUILD_DIR}/lib/libclangEdit.a
    ${LLDB_BUILD_DIR}/lib/libclangRewrite.a
    ${LLDB_BUILD_DIR}/lib/libclangRewriteFrontend.a
    ${LLDB_BUILD_DIR}/lib/libclangASTMatchers.a
    ${LLDB_BUILD_DIR}/lib/libclangLex.a
    ${LLDB_BUILD_DIR}/lib/libclangAPINotes.a
    ${LLDB_BUILD_DIR}/lib/libclangCAS.a
    ${LLDB_BUILD_DIR}/lib/libclangSupport.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCore.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSupport.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBinaryFormat.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDemangle.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMC.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoCodeView.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoDWARF.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoMSF.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoPDB.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoBTF.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSymbolize.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTarget.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSelectionDAG.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAsmPrinter.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMIRParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMGlobalISel.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBitReader.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBitWriter.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTransformUtils.a
    ${LLDB_BUILD_DIR}/lib/libLLVMInstrumentation.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAggressiveInstCombine.a
    ${LLDB_BUILD_DIR}/lib/libLLVMInstCombine.a
    ${LLDB_BUILD_DIR}/lib/libLLVMScalarOpts.a
    ${LLDB_BUILD_DIR}/lib/libLLVMipo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVectorize.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLinker.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAnalysis.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLTO.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPasses.a
    ${LLDB_BUILD_DIR}/lib/libLLVMObjCARCOpts.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCoroutines.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendOpenMP.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendHLSL.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendOffloading.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendDriver.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDWP.a
    ${LLDB_BUILD_DIR}/lib/libLLVMOption.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRemarks.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBitstreamReader.a
    ${LLDB_BUILD_DIR}/lib/libLLVMProfileData.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCoverage.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLineEditor.a
    ${LLDB_BUILD_DIR}/lib/libLLVMOrcShared.a
    ${LLDB_BUILD_DIR}/lib/libLLVMOrcTargetProcess.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRemoteCachingService.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRemoteNullService.a
    ${LLDB_BUILD_DIR}/lib/libLLVMExtensions.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTestingSupport.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTextAPI.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTableGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCA.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCCAS.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCJIT.a
    ${LLDB_BUILD_DIR}/lib/libLLVMExecutionEngine.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRuntimeDyld.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTargetParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWindowsDriver.a
    ${LLDB_BUILD_DIR}/lib/libLLVMObjCopy.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDlltoolDriver.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLibDriver.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXRay.a
    ${LLDB_BUILD_DIR}/lib/libLLVMX86AsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMX86CodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMX86Desc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMX86Disassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMX86Info.a
    ${LLDB_BUILD_DIR}/lib/libLLVMX86TargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMARMUtils.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64AsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64CodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64Desc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64Disassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64Info.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64TargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAArch64Utils.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRISCVUtils.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPowerPCAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPowerPCCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPowerPCDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPowerPCDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPowerPCInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPowerPCTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMipsAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMipsCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMipsDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMipsDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMipsInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMipsTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHexagonAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHexagonCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHexagonDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHexagonDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHexagonInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHexagonTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLanaiAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLanaiCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLanaiDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLanaiDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLanaiInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLanaiTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLoongArchAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLoongArchCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLoongArchDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLoongArchDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLoongArchInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLoongArchTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMSP430AsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMSP430CodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMSP430Desc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMSP430Disassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMSP430Info.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMSP430TargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMNVPTXCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMNVPTXDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMNVPTXInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMNVPTXTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAMDGPUUtils.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWebAssemblyAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWebAssemblyCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWebAssemblyDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWebAssemblyDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWebAssemblyInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWebAssemblyTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAVRAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAVRCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAVRDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAVRDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAVRInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAVRTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBPFAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBPFCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBPFDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBPFDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBPFInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBPFTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVEAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVECodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVEDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVEDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVEInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVETargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXCoreAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXCoreCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXCoreDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXCoreDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXCoreInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXCoreTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSystemZAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSystemZCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSystemZDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSystemZDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSystemZInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSystemZTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSparcAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSparcCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSparcDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSparcDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSparcInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSparcTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMM68kAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMM68kCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMM68kDesc.a
    ${LLDB_BUILD_DIR}/lib/libLLVMM68kDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMM68kInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMM68kTargetInfo.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCAS.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCASUtil.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFuzzerCLI.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFuzzerNoMain.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFuzzerSingle.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFuzzer.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFuzzMutate.a
    ${LLDB_BUILD_DIR}/lib/libLLVMInterfaceStub.a
    ${LLDB_BUILD_DIR}/lib/libLLVMIRReader.a
    ${LLDB_BUILD_DIR}/lib/libLLVMObjCopy.a
    ${LLDB_BUILD_DIR}/lib/libLLVMOption.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTarget.a
    ${LLDB_BUILD_DIR}/lib/libLLVMAsmParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBitReader.a
    ${LLDB_BUILD_DIR}/lib/libLLVMBitWriter.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCodeGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMCore.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoCodeView.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoDWARF.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoMSF.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebugInfoPDB.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDebuginfod.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDemangle.a
    ${LLDB_BUILD_DIR}/lib/libLLVMDWP.a
    ${LLDB_BUILD_DIR}/lib/libLLVMExecutionEngine.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendDriver.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendHLSL.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendOffloading.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFrontendOpenMP.a
    ${LLDB_BUILD_DIR}/lib/libLLVMFuzzMutate.a
    ${LLDB_BUILD_DIR}/lib/libLLVMGlobalISel.a
    ${LLDB_BUILD_DIR}/lib/libLLVMHipStdPar.a
    ${LLDB_BUILD_DIR}/lib/libLLVMInstCombine.a
    ${LLDB_BUILD_DIR}/lib/libLLVMInstrumentation.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLTO.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLineEditor.a
    ${LLDB_BUILD_DIR}/lib/libLLVMLinker.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMC.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCA.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCCAS.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCDisassembler.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCJIT.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMCParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMMIRParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMObjCARCOpts.a
    ${LLDB_BUILD_DIR}/lib/libLLVMObject.a
    ${LLDB_BUILD_DIR}/lib/libLLVMObjectYAML.a
    ${LLDB_BUILD_DIR}/lib/libLLVMOption.a
    ${LLDB_BUILD_DIR}/lib/libLLVMPasses.a
    ${LLDB_BUILD_DIR}/lib/libLLVMProfileData.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRemarks.a
    ${LLDB_BUILD_DIR}/lib/libLLVMRuntimeDyld.a
    ${LLDB_BUILD_DIR}/lib/libLLVMScalarOpts.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSelectionDAG.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSupport.a
    ${LLDB_BUILD_DIR}/lib/libLLVMSymbolize.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTableGen.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTarget.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTargetParser.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTextAPI.a
    ${LLDB_BUILD_DIR}/lib/libLLVMTransformUtils.a
    ${LLDB_BUILD_DIR}/lib/libLLVMVectorize.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWindowsDriver.a
    ${LLDB_BUILD_DIR}/lib/libLLVMWindowsManifest.a
    ${LLDB_BUILD_DIR}/lib/libLLVMXRay.a
    -ldl
    -lpthread
    -lz
    -lm
    -lxml2
    -lpython3.13
    -lutil
    -lrt
    -lncurses
    -ltinfo
    -lreadline
    -lhistory
    -ltermcap
)

# Set compiler flags
target_compile_options(swift_repl_test PRIVATE
    -fPIC
    -Wall
    -Wextra
)

# Print configuration info
message(STATUS "Building SwiftREPL example in: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "LLDB build directory: ${LLDB_BUILD_DIR}")
message(STATUS "LLDB source directory: ${LLDB_SOURCE_DIR}")
